--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title> Umang's Personal Site </title>
-  <link rel="stylesheet" href="UmangUdit96/cv/CSS/styles.css">
+  <link rel="stylesheet" href="cv/CSS/styles.css">
 </head>
 
 <body>
