--- a/hobbies.html
+++ b/hobbies.html
@@ -3,7 +3,10 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title></title>
+  <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 
 <body>
@@ -18,6 +21,7 @@
     <li>Archery</li>
     <li>Martial Arts</li>
   </ol>
+  <hr>
 </body>
 
 </html>
